# a4e-mcp-server

./: .gitignore  AGENTS.md  CLI.md  README.md  main.py  pyproject.toml
a4e/: cli.py  core.py  dev_runner.py  server.py
a4e/cli_commands/: __init__.py  add.py  deploy.py  dev.py  info.py  init.py  list.py  remove.py  update.py  validate.py
a4e/templates/: agent.md.j2  agent.py.j2  agents.md.j2  metadata.json.j2  prompt.md.j2  support_module.py.j2  tool.py.j2
a4e/templates/prompts/: agent.md.j2
a4e/templates/skills/: agents.md.j2  skill.md.j2
a4e/templates/tools/: agent.md.j2
a4e/templates/views/: agent.md.j2
a4e/tools/: __init__.py
a4e/tools/agent_tools/: __init__.py  add_support_module.py  add_tool.py  list_tools.py  remove_tool.py  update_tool.py
a4e/tools/deploy/: __init__.py  deploy.py
a4e/tools/dev/: __init__.py  check_environment.py  dev_start.py  dev_stop.py
a4e/tools/project/: __init__.py  get_agent_info.py  get_instructions.py  initialize_project.py
a4e/tools/schemas/: __init__.py  generate_schemas.py
a4e/tools/skills/: __init__.py  add_skill.py  helpers.py  list_skills.py  remove_skill.py  update_skill.py
a4e/tools/validation/: __init__.py  validate.py
a4e/tools/views/: __init__.py  helpers.py  list_views.py  (+2 more)
a4e/utils/: dev_manager.py  schema_generator.py
a4e_mcp/: dev_runner.py  server.py
a4e_mcp/templates/: prompt.md.j2  view.tsx.j2  widget.tsx.j2
a4e_mcp/tools/: __init__.py
a4e_mcp/utils/: dev_manager.py  schema_generator.py
docs/: BUG_REPORT_VIEW_RENDERING.md  EXAMPLES.md  GETTING_STARTED.md  VIEW_SYSTEM.md
(+2 files in other folders)
